Comento línea de media porque los outliers distorsionan la visualización el gráfico

--- a/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
+++ b/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
@@ -437,16 +437,16 @@
     "    hovertemplate='<b>%{x}</b><br>Mediana: $%{y:,.0f}<extra></extra>'\n",
     "))\n",
     "\n",
-    "# Línea de media\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=trayectoria.index.astype(str),\n",
-    "    y=trayectoria['Media'],\n",
-    "    mode='lines+markers',\n",
-    "    name='Salario Medio',\n",
-    "    line=dict(color='#00CC96', width=2, dash='dash'),\n",
-    "    marker=dict(size=8, color='#00CC96'),\n",
-    "    hovertemplate='<b>%{x}</b><br>Media: $%{y:,.0f}<extra></extra>'\n",
-    "))\n",
+    "# Línea de media - Comento esta parte del gráfico porque los outliers distorsionan la visualización\n",
+    "# fig.add_trace(go.Scatter(\n",
+    "#     x=trayectoria.index.astype(str),\n",
+    "#     y=trayectoria['Media'],\n",
+    "#     mode='lines+markers',\n",
+    "#     name='Salario Medio',\n",
+    "#     line=dict(color='#00CC96', width=2, dash='dash'),\n",
+    "#     marker=dict(size=8, color='#00CC96'),\n",
+    "#     hovertemplate='<b>%{x}</b><br>Media: $%{y:,.0f}<extra></extra>'\n",
+    "# ))\n",
     "\n",
     "fig.update_layout(\n",
     "    title='Trayectoria Salarial: Evolución por Años de Experiencia',\n",
