Resuelvo el overfitting y agrego validación cruzada. Ahora el modelo generaliza mejor.

--- a/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
+++ b/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
@@ -56,6 +56,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_absolute_error, r2_score, mean_squared_error\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "# Configuración de Plotly\n",
     "pio.templates.default = \"plotly_white\""
@@ -761,6 +762,23 @@
     "fig.update_layout(height=500, showlegend=False, xaxis_tickangle=-45)\n",
     "fig.show()\n",
     "\n",
+    "# Simplificar tamaño de empresa\n",
+    "def simplificar_tamano_empresa(tamano):\n",
+    "    if pd.isna(tamano):\n",
+    "        return 'Desconocido'\n",
+    "    if any(x in str(tamano) for x in ['De 2 a', 'De 11', 'De 51', '1 (solamente']):\n",
+    "        return 'Pequeña (1-100)'\n",
+    "    elif any(x in str(tamano) for x in ['De 101', 'De 201', 'De 501']):\n",
+    "        return 'Mediana (101-1000)'\n",
+    "    else:\n",
+    "        return 'Grande (1000+)'\n",
+    "\n",
+    "# Aplicar la simplificación al dataframe original\n",
+    "df_clean['tamano_empresa'] = df_clean['tamano_empresa'].apply(simplificar_tamano_empresa)\n",
+    "print(f\"[INFO] Tamaño empresa simplificado:\")\n",
+    "print(df_clean['tamano_empresa'].value_counts())\n",
+    "print()\n",
+    "\n",
     "# Preparar datos para modelo\n",
     "features_list = ['experiencia', 'antiguedad', 'edad', 'seniority', 'modalidad',\n",
     "                 'es_caba', 'tipo_contrato', 'tamano_empresa', 'puesto_categoria',\n",
@@ -838,8 +856,16 @@
     "print(f\"[MODELO] Entrenamiento: {len(X_train)} | Test: {len(X_test)}\")\n",
     "\n",
     "# Entrenar\n",
-    "model = RandomForestRegressor(n_estimators=100, max_depth=15, min_samples_split=5, \n",
-    "                              random_state=42, n_jobs=-1)\n",
+    "model = RandomForestRegressor(\n",
+    "    n_estimators=50,           \n",
+    "    max_depth=8,               \n",
+    "    min_samples_split=20,      \n",
+    "    min_samples_leaf=10,       \n",
+    "    max_features='sqrt',       \n",
+    "    max_samples=0.8,           \n",
+    "    random_state=42,\n",
+    "    n_jobs=-1\n",
+    ")\n",
     "model.fit(X_train, y_train)\n",
     "print(\"[MODELO] Entrenado exitosamente\\n\")\n",
     "\n",
@@ -866,6 +892,16 @@
     "    print(f\"\\nAdvertencia: Posible overfitting (diferencia R²: {diff_r2:.3f})\")\n",
     "else:\n",
     "    print(f\"\\nEl modelo generaliza bien (diferencia R²: {diff_r2:.3f})\")\n",
+    "print()\n",
+    "\n",
+    "print(\"VALIDACIÓN CRUZADA (5-FOLD):\")\n",
+    "cv_scores = cross_val_score(model, X, y, cv=5, scoring='r2', n_jobs=-1)\n",
+    "print(f\"R² promedio: {cv_scores.mean():.4f} (±{cv_scores.std():.4f})\")\n",
+    "print(f\"R² por fold: {[f'{score:.3f}' for score in cv_scores]}\")\n",
+    "\n",
+    "# Evaluar también MAE con validación cruzada\n",
+    "cv_mae = -cross_val_score(model, X, y, cv=5, scoring='neg_mean_absolute_error', n_jobs=-1)\n",
+    "print(f\"MAE promedio: ${cv_mae.mean():,.0f} (±${cv_mae.std():,.0f})\")\n",
     "print()"
    ]
   },
@@ -1093,8 +1129,12 @@
     "print(f\"\"\"\n",
     "El modelo Random Forest revela que:\n",
     "\n",
-    "* Precision (R²): {r2_test:.1%} - Explica {r2_test*100:.1f}% de la variabilidad salarial\n",
-    "* Error promedio: ${mae_test:,.0f} USD/mes\n",
+    "El modelo Random Forest revela que:\n",
+    "\n",
+    "* Precision (R² test): {r2_test:.1%} - Explica {r2_test*100:.1f}% de la variabilidad salarial\n",
+    "* Precision (R² CV): {cv_scores.mean():.1%} - Validación cruzada confirma estabilidad\n",
+    "* Error promedio: ${mae_test:,.0f} USD/mes (±${cv_mae.std():,.0f})\n",
+    "* Overfitting: {'✓ Controlado' if diff_r2 < 0.2 else '⚠ Presente'} (diferencia R²: {diff_r2:.3f})\n",
     "* Factor mas determinante: {top_cat} ({top_val:.1f}% de importancia)\n",
     "\n",
     "Top 3 variables individuales:\n",
