Corrijo texto de output para overfitting

--- a/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
+++ b/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
@@ -1132,7 +1132,7 @@
     "* Precision (R² test): {r2_test:.1%} - Explica {r2_test*100:.1f}% de la variabilidad salarial\n",
     "* Precision (R² CV): {cv_scores.mean():.1%} - Validación cruzada confirma estabilidad\n",
     "* Error promedio: ${mae_test:,.0f} USD/mes (±${cv_mae.std():,.0f})\n",
-    "* Overfitting: {'✓ Controlado' if diff_r2 < 0.2 else '⚠ Presente'} (diferencia R²: {diff_r2:.3f})\n",
+    "* Overfitting: {'Controlado' if diff_r2 < 0.2 else 'Presente'} (diferencia R²: {diff_r2:.3f})\n",
     "* Factor mas determinante: {top_cat} ({top_val:.1f}% de importancia)\n",
     "\n",
     "Top 3 variables individuales:\n",
