docs: :memo: Añadir secciones y explicaciones en MarkDown
Reestructuré las secciones y subsecciones con MarkDown y agregué la redacción de cada parte del informe para que luego se vea bien estructurado en el PDF renderizado

--- a/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
+++ b/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Trabajo de simulación 3\n",
     "\n",
+    "## Consigna\n",
+    "\n",
     "Para el último trabajo de simulación, vamos a hacer un análisis de datos a partir de la encuesta de salarios de Sysarmy del primer trimestre de 2025 (si están publicados los del segundo trimestre o posterior, podemos usar esos, pero a agosto de 2025 todavía no estaban).\n",
     "\n",
     "Los datos oficiales se encuentran [acá](https://docs.google.com/spreadsheets/d/1hlLwv9SLJvrnsTq_UsEAHkHGNiziH7IdT1lJd4fq6kU/edit?gid=1462536742#gid=1462536742). Por si en algún momento el enlace se cae o cambia de ubicación, una versión alojada en mi drive puede encontrarse [acá](https://docs.google.com/spreadsheets/d/1Vq9F6xE03fR0x6pXlRMDN_bww7NWItjMW0U89qV3AvM/edit?usp=sharing).\n",
@@ -29,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimización salarial\n",
+    "### Nuestra resolución: _Optimización salarial_\n",
     "\n",
     "Para realizar nuestro análisis tomamos la perspectiva de un profesional del sector IT que necesita transfomar su carrera por alguna razón. Sabemos que esta industria se caracteriza por un nivel de rotación alto y los recorridos profesionales suelen ser muy variados. La pregunta central de nuestro trabajo es _¿cómo puedo maximizar mi salario?_, es decir, _¿cuál es la **combinación ganadora** que se podría obtener como insight de este dataset?_ Los resultados obtenidos podrían ser de utilidad tanto para el _junior_, que necesita alguna \"brújula\" para ver por dónde orientarse dentro del mercado laboral, como para el _senior_ que quizá se siente estancado y necesite reorientar su desarrollo profesional dentro del sector. "
    ]
@@ -66,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inspección y limpieza de datos\n",
+    "#### Inspección y limpieza de datos\n",
     "\n",
     "Comenzamos importando las librerías necesarias y cargando el dataset. Luego inspeccionamos los datos para ver qué variables tenemos disponibles y qué tipo de datos contienen. "
    ]
@@ -318,18 +320,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### El perfil del top 10%\n",
+    "\n",
+    "Si bien nuestro objetivo es encontrar la combinación ganadora, creemos que un buen punto de partida es analizar el perfil del top 10% con el mejor salario. La idea es entender qué características tienen en común los profesionales que están en este grupo y ver si podemos extraer alguna conclusión útil para nuestro análisis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ====================================================================\n",
-    "# 3.2 PERFIL DEL TOP 10%\n",
-    "# ====================================================================\n",
-    "print(\"-\"*70)\n",
-    "print(\"PERFIL DEL TOP 10% MEJOR PAGADO\")\n",
-    "print(\"-\"*70 + \"\\n\")\n",
-    "\n",
     "percentil_90 = df_analisis['salario_usd'].quantile(0.90)\n",
     "top_10_percent = df_analisis[df_analisis['salario_usd'] >= percentil_90]\n",
     "\n",
@@ -354,6 +358,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### El \"salto salarial\" en la trayectoria profesional\n",
+    "\n",
     "De a poco vemos emerger la infomación relevante. Una vez que analizamos las variables anteriores, podemos abordar la cuestión de la \"trayectoria profesional\" para encontrar el momento del **salto salarial**, _¿suele tardar en llegar?_, _¿llega en algún momento o tiende más a bien a ser estable?_. Esto es lo que intentamos responder a continuación."
    ]
   },
@@ -390,16 +396,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evolución del salario a través de los años\n",
+    "\n",
+    "Podemos visualizar la evolución del salario mediano a lo largo de los años de experiencia para observar tendencias y patrones en el crecimiento salarial. También podemos analizar la distribución de salarios en diferentes rangos de experiencia para ver cómo varía el salario entre profesionales con diferentes niveles."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ====================================================================\n",
-    "# 4.1 VISUALIZACIONES DE TRAYECTORIA\n",
-    "# ====================================================================\n",
-    "print(\"[GENERANDO VISUALIZACIONES DE TRAYECTORIA...]\\n\")\n",
-    "\n",
     "# Visualización: Evolución del salario mediano\n",
     "fig = go.Figure()\n",
     "\n",
@@ -473,17 +483,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualizaciones comparativas\n",
+    "\n",
+    "Ahora bien, una vez que tenemos toda esta información, podemos intentar combinar las variables para encontrar la combinación ganadora que maximiza el salario."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. VISUALIZACIONES COMPARATIVAS\n",
-    "print(\"=\"*70)\n",
-    "print(\"VISUALIZACIONES COMPARATIVAS\")\n",
-    "print(\"=\"*70 + \"\\n\")\n",
-    "\n",
-    "# Dashboard Completo\n",
     "fig = make_subplots(\n",
     "    rows=3, cols=3,\n",
     "    subplot_titles=('Ubicación', 'Tipo de Contrato', 'Dedicación',\n",
@@ -632,16 +645,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### La combinación ganadora\n",
+    "\n",
+    "Después de todo este análisis, podemos finalmente presentar la combinación ganadora que maximiza el salario. Esta combinación se basa en las variables que hemos analizado y las conclusiones que hemos extraído a lo largo de este \"análisis exploratorio de datos\" (EDA)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6. RESUMEN EJECUTIVO\n",
-    "print(\"RESUMEN EJECUTIVO: LA COMBINACIÓN GANADORA\")\n",
-    "\n",
     "resumen = f\"\"\"\n",
-    "PERFIL DEL TRABAJADOR IDEAL (MÁXIMOS SALARIOS)\n",
+    "PERFIL DE LOS TRABAJADORES MEJOR PAGOS\n",
     "\n",
     "[1] UBICACION: {mejor_ubicacion}\n",
     "    Mediana: ${ubicacion_stats.loc[mejor_ubicacion, 'Mediana']:,.0f} USD\n",
@@ -698,13 +717,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Machine Learning: _Random Forest Regressor_\n",
+    "\n",
+    "En esta parte del trabajo, buscamos ir más allá del análisis descriptivo y explorar la importancia relativa de las variables en la predicción del salario utilizando técnicas de Machine Learning. Nuestro objetivo es identificar cuáles son las características más influyentes que determinan el salario de los profesionales en el sector IT y ver si existe una coincidencia entre estas variables y las que hemos identificado en nuestro análisis previo como parte de la \"combinación ganadora\". Creemos que al sumar este enfoque, podemos obtener una visión más completa y robusta de los factores que impactan en el salario, validando o complementando nuestras conclusiones anteriores con un análisis basado en datos y modelos predictivos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Importancia de las variables\n",
+    "\n",
+    "En primer lugar, debemos preparar los datos para el modelo de Machine Learning. Esto incluye seleccionar las variables relevantes, manejar valores faltantes y dividir los datos en conjuntos de entrenamiento y prueba. El modelo que vamos a aplicar es un Random Forest Regressor, muy utilizado para problemas de regresión que puede manejar tanto variables numéricas como categóricas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 7. MACHINE LEARNING: IMPORTANCIA DE VARIABLES\n",
-    "\n",
     "# Categorizar puestos\n",
     "def categorizar_puesto(puesto):\n",
     "    if pd.isna(puesto):\n",
@@ -895,13 +930,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualización: predicciones vs. realidad\n",
+    "\n",
+    "El modelo entrenado nos permite hacer predicciones sobre los salarios basándonos en las características de los profesionales. Para evaluar el rendimiento del modelo, podemos comparar las predicciones con los valores reales de salario en el conjunto de prueba. Una forma efectiva de visualizar esta comparación es mediante un gráfico de dispersión (scatter plot), donde cada punto representa un profesional, con su salario real en el eje Y y su salario predicho por el modelo en el eje X."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 7.1 VISUALIZACIÓN: PREDICCIONES VS REALES\n",
-    "\n",
     "# Scatter plot con muestreo si hay muchos puntos\n",
     "n_points = len(y_test)\n",
     "if n_points > 500:\n",
@@ -1004,13 +1046,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cálculo de la importancia de las variables\n",
+    "\n",
+    "En este caso, el modelo nos proporciona una medida de la importancia de cada variable en la predicción del salario. Podemos ordenar estas importancias y visualizarlas para identificar cuáles son las características más influyentes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# IMPORTANCIA DE VARIABLES\n",
-    "\n",
     "# Calcular importancias\n",
     "importances = model.feature_importances_\n",
     "feature_imp_df = pd.DataFrame({\n",
@@ -1074,13 +1123,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Análisis de residuos\n",
+    "\n",
+    "Finalmente, podemos analizar los residuos del modelo, es decir, la diferencia entre los salarios reales y los predichos. Esto nos permite identificar patrones en los errores del modelo y entender mejor su rendimiento."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 7.3 ANÁLISIS DE RESIDUOS\n",
-    "\n",
     "# Calcular residuos\n",
     "residuos = y_test - y_pred_test\n",
     "\n",
@@ -1103,17 +1159,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusiones del modelo de Machine Learning\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 8. CONCLUSIONES FINALES\n",
-    "\n",
     "top_cat = imp_agrupada.index[0]\n",
     "top_val = imp_agrupada.iloc[0]\n",
-    "\n",
-    "print(\"CONCLUSIONES DEL MODELO PREDICTIVO\")\n",
     "\n",
     "print(f\"\"\"\n",
     "El modelo Random Forest revela que:\n",
@@ -1128,10 +1188,16 @@
     "1. {feature_imp_df.iloc[0]['Variable']}: {feature_imp_df.iloc[0]['Importancia_%']:.2f}%\n",
     "2. {feature_imp_df.iloc[1]['Variable']}: {feature_imp_df.iloc[1]['Importancia_%']:.2f}%\n",
     "3. {feature_imp_df.iloc[2]['Variable']}: {feature_imp_df.iloc[2]['Importancia_%']:.2f}%\n",
-    "\n",
-    "Implicación práctica: Para maximizar salario, el trabajador debe enfocarse en optimizar su\n",
-    "{top_cat.lower()}, seguido de las variables identificadas arriba.\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusión de nuestro análisis\n",
+    "\n",
+    "A modo de cierre, luego del EDA (\"Análisis exploratorio de Datos\") y del análisis utilizando Machine Learning, podemos llegar a la conclusión de que la mejor combinación de variables para maximizar el salario en el sector IT es la siguiente: en primer lugar, la experiencia laboral. Podríamos decir que \"cuanto antes, mejor\", es decir, comenzar a trabajar lo antes posible para acumular experiencia, incluso mientras se está estudiando, ya que no parece ser un mercado laboral que exija títulos universitarios para acceder a mejores salarios. La mejora constante sí es algo necesario pero no necesariamente a través de títulos formales. La dolarización del salario también es un factor clave, ya que los salarios en dólares tienden a ser más altos en comparación con los salarios en moneda local. Por último, algo que también está vinculado con la seniority/experiencia es el liderazgo, aquellas personas con \"gente a cargo\" que dirigen equipos suelen tener salarios más altos. Esta última variable se vincula directamente con las llamadas \"soft skills\", lo que coincide con la tendencia actual del mercado laboral que valora cada vez más estas habilidades interpersonales y de gestión. "
    ]
   }
  ],
