docs: :memo: Añadir conclusiones del modelo de Machine Learning
Agregué un párrafo que explica las conclusiones obtenidas por el modelo de ML

--- a/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
+++ b/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
@@ -1163,7 +1163,8 @@
    "metadata": {},
    "source": [
     "#### Conclusiones del modelo de Machine Learning\n",
-    "\n"
+    "\n",
+    "El modelo identifica correctamente que la experiencia, edad y forma de pago en dólares son los predictores más importantes del salario. Esto coincide con nuestro análisis previo, donde también destacamos estas variables como parte de la combinación ganadora. De esta forma validamos nuestras conclusiones y reforzamos la idea de que estas características son clave para maximizar el salario en el sector IT."
    ]
   },
   {
