test: :test_tube: Crea primer PDF de prueba
Creo la primera versión en PDF con los nuevos gráficos estáticos

--- a/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
+++ b/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
@@ -1082,20 +1082,20 @@
       "[INFO] Variables predictoras: 11\n",
       "[INFO] Salario USD - Min: $261 | Max: $12,106\n",
       "[INFO] Salario USD - Media: $3,126 | Mediana: $2,642\n",
-      "\n",
-      "[INFO] Features después de encoding: 26\n",
-      "[VALIDACIÓN] NaN en X: 0\n",
-      "[VALIDACIÓN] Infinitos en X: 0\n",
-      "[VALIDACIÓN] NaN en y: 0\n",
-      "[VALIDACIÓN] Infinitos en y: 0\n",
-      "\n",
-      "[MODELO] Entrenamiento: 1461 | Test: 366\n"
+      "\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[INFO] Features después de encoding: 26\n",
+      "[VALIDACIÓN] NaN en X: 0\n",
+      "[VALIDACIÓN] Infinitos en X: 0\n",
+      "[VALIDACIÓN] NaN en y: 0\n",
+      "[VALIDACIÓN] Infinitos en y: 0\n",
+      "\n",
+      "[MODELO] Entrenamiento: 1461 | Test: 366\n",
       "[MODELO] Entrenado exitosamente\n",
       "\n",
       "MÉTRICAS DEL MODELO\n",
